<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">냉장고를 부탁해</string>
    <string name="title_main">냉장고를 부탁해!</string>
    <string name="chooseIngredient_main">재료선택</string>
    <string name="addIngredient_main">재료\n추가</string>
    <string name="searchingRecipe_main">레시피\n검색</string>
    <string name="bookmark_main">즐겨찾기</string>
    <string name="setting_main">설정</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="current_date">0000.00.00</string>
    <string name="product_name_setting">제품명</string>
    <string name="expiration_date_setting">유통기한</string>
    <string name="back">BACK</string>
    <string name="ok">OK</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="title_activity_abcd">AbcdActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_noti">NotiActivity</string>
    <string name="onoff_text_noti">알림 설정</string>
    <string name="title_activity_setting_test">SettingTestActivity</string>
    <string name="title_activity_searching">SearchingActivity</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>
    <string name="searching_text">검색하고 싶은 재료를 띄어쓰기로 구분하여 입력해주세요.\n\n예시) 계란 당근 오이</string>
    <string name="title_activity_info">InfoActivity</string>

</resources>
