<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context="com.DeliciousRecipes.nangboo" >

    <!--  액션바 대신에 LinearLayout! height는 40dp로 통일해주세용 -->
    
    <LinearLayout
        android:id="@+id/action_bar_add"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/back"
            android:background="@color/clarity"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:background="@color/clarity"
            android:text="@string/ok" />

    </LinearLayout>
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"

        >
        
        <TextView
            android:id="@+id/product_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
			android:layout_marginLeft="40dp"
            android:text="@string/product_name_setting"
            android:textSize="20dp"
            android:textStyle="bold"
            
            />
        
        <EditText
            android:id="@+id/product_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
            android:hint="제품명을 입력하세요"
			android:gravity="center"
            android:inputType="text"
            android:background="@color/yellow"
            android:layout_below="@id/product_name_textview"
            />

		<TextView
            android:id="@+id/expiration_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
			android:layout_marginLeft="40dp"
            android:text="@string/expiration_date_setting"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@id/product_name_edittext"
            />
		
        <Button
            android:id="@+id/expiration_date_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
            android:text="@string/current_date"
            android:background="@color/yellow"
            android:layout_below="@id/expiration_date_textview"
            />
        
        <TextView
            android:id="@+id/memo_textview_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
			android:layout_marginLeft="40dp"
			android:text="메모"
			android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@id/expiration_date_button"
            />
        
        <EditText 
            android:id="@+id/memo_add"
 			android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/yellow"
			android:layout_marginTop="10dp"
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:paddingLeft="8dp"
			android:textSize="15dp"
			android:layout_below="@id/memo_textview_add"
            />
    </RelativeLayout>
        
    
</LinearLayout>
